bug fix: input spacing in desktop and mobile

--- a/css/header.css
+++ b/css/header.css
@@ -83,14 +83,16 @@
 
 .header-search-mobile{
     margin: 0px 5px 10px 5px;
-    padding-left: 10px;
     border: 2px solid #ccc;
     border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .header-search-mobile input {
     border:0;
-    padding: 0px 0px 5px 10px;
+    margin-left: 15px;
+    width: 100%;
 }
 
 .header-search-mobile button {
@@ -158,16 +160,16 @@
 .header-input-box{
     padding-left: 5px;
     border: 2px solid #ddd;
-    /* border-radius: 20px; */
     width: 500px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .header-input-box input {
-    display:inline-block;
     outline: 0;
     border: none;
-    /* width: 200px; */
-    padding: 2px 0px 0px 15px;
+    width: 100%;
+    margin-left: 10px;
 }
 
 .header-input-box button {
